skorch example is running

--- a/my_toy_nn2.ipynb
+++ b/my_toy_nn2.ipynb
@@ -12,15 +12,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master 9710791] checkpoint\n",
-      " 2 files changed, 628 insertions(+), 435 deletions(-)\n"
+      "[master ba952f9] checkpoint\n",
+      " 1 file changed, 317 insertions(+), 83 deletions(-)\n"
      ]
     }
    ],
@@ -2697,7 +2697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2708,7 +2708,11 @@
     "\n",
     "    def get_loss(self, y_pred, y_true, X=None, training=False):\n",
     "        loss = super().get_loss(y_pred, y_true, X=X, training=training)\n",
+    "        regularization_loss = 0\n",
+    "        for param in self.module.parameters():\n",
+    "            regularization_loss += torch.sum(torch.abs(param))\n",
     "        #loss += self.lambda1 * sum([w.abs().sum() for w in self.module_.parameters()])\n",
+    "        loss = loss + regularization_loss * 1000\n",
     "        return loss"
    ]
   },
@@ -2721,7 +2725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2731,7 +2735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
     {
@@ -2751,7 +2755,7 @@
        ")"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 178,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2778,7 +2782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2796,55 +2800,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 139,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\u001b[0;31mSignature:\u001b[0m \u001b[0mNeuralNet\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_params\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-       "\u001b[0;31mDocstring:\u001b[0m\n",
-       "Set the parameters of this class.\n",
-       "\n",
-       "Valid parameter keys can be listed with ``get_params()``.\n",
-       "\n",
-       "Returns\n",
-       "-------\n",
-       "self\n",
-       "\u001b[0;31mFile:\u001b[0m      ~/anaconda3/envs/base2/lib/python3.7/site-packages/skorch/net.py\n",
-       "\u001b[0;31mType:\u001b[0m      function\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "?NeuralNet.set_params"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 137,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<function skorch.net.NeuralNet.__init__(self, module, criterion, optimizer=<class 'torch.optim.sgd.SGD'>, lr=0.01, max_epochs=10, batch_size=128, iterator_train=<class 'torch.utils.data.dataloader.DataLoader'>, iterator_valid=<class 'torch.utils.data.dataloader.DataLoader'>, dataset=<class 'skorch.dataset.Dataset'>, train_split=<skorch.dataset.CVSplit object at 0x7fd8a0df5c50>, callbacks=None, warm_start=False, verbose=1, device='cpu', **kwargs)>"
-      ]
-     },
-     "execution_count": 137,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "NeuralNet.__init__"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2853,9 +2808,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 179,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  epoch    train_loss    valid_loss     dur\n",
+      "-------  ------------  ------------  ------\n",
+      "      1    \u001b[36m68957.0406\u001b[0m    \u001b[32m67861.9000\u001b[0m  0.0110\n",
+      "      2    \u001b[36m66532.8383\u001b[0m    \u001b[32m65526.0531\u001b[0m  0.0109\n",
+      "      3    \u001b[36m64297.5172\u001b[0m    \u001b[32m63370.4508\u001b[0m  0.0108\n",
+      "      4    \u001b[36m62242.4461\u001b[0m    \u001b[32m61394.4227\u001b[0m  0.0108\n",
+      "      5    \u001b[36m60376.4531\u001b[0m    \u001b[32m59616.8852\u001b[0m  0.0109\n",
+      "      6    \u001b[36m58702.4953\u001b[0m    \u001b[32m58012.2992\u001b[0m  0.0108\n",
+      "      7    \u001b[36m57188.2602\u001b[0m    \u001b[32m56558.8719\u001b[0m  0.0108\n",
+      "      8    \u001b[36m55814.4219\u001b[0m    \u001b[32m55228.0641\u001b[0m  0.0108\n",
+      "      9    \u001b[36m54563.5859\u001b[0m    \u001b[32m54029.2258\u001b[0m  0.0108\n",
+      "     10    \u001b[36m53427.1852\u001b[0m    \u001b[32m52922.1023\u001b[0m  0.0108\n",
+      "  epoch    train_loss    valid_loss     dur\n",
+      "-------  ------------  ------------  ------\n",
+      "      1    \u001b[36m69143.4453\u001b[0m    \u001b[32m66310.7648\u001b[0m  0.0107\n",
+      "      2    \u001b[36m66696.5859\u001b[0m    \u001b[32m64190.1305\u001b[0m  0.0109\n",
+      "      3    \u001b[36m64439.5828\u001b[0m    \u001b[32m62230.9352\u001b[0m  0.0107\n",
+      "      4    \u001b[36m62364.4609\u001b[0m    \u001b[32m60431.6836\u001b[0m  0.0108\n",
+      "      5    \u001b[36m60480.3234\u001b[0m    \u001b[32m58812.5117\u001b[0m  0.0108\n",
+      "      6    \u001b[36m58790.1836\u001b[0m    \u001b[32m57345.3836\u001b[0m  0.0108\n",
+      "      7    \u001b[36m57261.9156\u001b[0m    \u001b[32m56008.9867\u001b[0m  0.0109\n",
+      "      8    \u001b[36m55876.1117\u001b[0m    \u001b[32m54776.1633\u001b[0m  0.0109\n",
+      "      9    \u001b[36m54615.3039\u001b[0m    \u001b[32m53656.7859\u001b[0m  0.0109\n",
+      "     10    \u001b[36m53471.0430\u001b[0m    \u001b[32m52616.1047\u001b[0m  0.0109\n",
+      "  epoch    train_loss    valid_loss     dur\n",
+      "-------  ------------  ------------  ------\n",
+      "      1    \u001b[36m69286.9859\u001b[0m    \u001b[32m66314.4734\u001b[0m  0.0107\n",
+      "      2    \u001b[36m66821.7180\u001b[0m    \u001b[32m64196.6195\u001b[0m  0.0110\n",
+      "      3    \u001b[36m64547.2469\u001b[0m    \u001b[32m62239.4234\u001b[0m  0.0108\n",
+      "      4    \u001b[36m62456.1930\u001b[0m    \u001b[32m60441.5820\u001b[0m  0.0108\n",
+      "      5    \u001b[36m60558.0359\u001b[0m    \u001b[32m58823.7352\u001b[0m  0.0108\n",
+      "      6    \u001b[36m58855.9898\u001b[0m    \u001b[32m57357.7789\u001b[0m  0.0108\n",
+      "      7    \u001b[36m57317.7969\u001b[0m    \u001b[32m56021.9953\u001b[0m  0.0108\n",
+      "      8    \u001b[36m55923.5375\u001b[0m    \u001b[32m54789.1734\u001b[0m  0.0109\n",
+      "      9    \u001b[36m54655.9586\u001b[0m    \u001b[32m53668.6352\u001b[0m  0.0109\n",
+      "     10    \u001b[36m53503.0648\u001b[0m    \u001b[32m52626.7633\u001b[0m  0.0109\n",
+      "  epoch    train_loss    valid_loss     dur\n",
+      "-------  ------------  ------------  ------\n",
+      "      1    \u001b[36m69562.8672\u001b[0m    \u001b[32m66310.7625\u001b[0m  0.0107\n",
+      "      2    \u001b[36m67067.5203\u001b[0m    \u001b[32m64189.7937\u001b[0m  0.0108\n",
+      "      3    \u001b[36m64763.9828\u001b[0m    \u001b[32m62230.2820\u001b[0m  0.0108\n",
+      "      4    \u001b[36m62645.0008\u001b[0m    \u001b[32m60431.0805\u001b[0m  0.0108\n",
+      "      5    \u001b[36m60720.3867\u001b[0m    \u001b[32m58812.3570\u001b[0m  0.0108\n",
+      "      6    \u001b[36m58993.3898\u001b[0m    \u001b[32m57346.0961\u001b[0m  0.0109\n",
+      "      7    \u001b[36m57432.5047\u001b[0m    \u001b[32m56010.8109\u001b[0m  0.0109\n",
+      "      8    \u001b[36m56018.2500\u001b[0m    \u001b[32m54779.6102\u001b[0m  0.0108\n",
+      "      9    \u001b[36m54734.0359\u001b[0m    \u001b[32m53661.6195\u001b[0m  0.0108\n",
+      "     10    \u001b[36m53567.5430\u001b[0m    \u001b[32m52623.5742\u001b[0m  0.0109\n",
+      "  epoch    train_loss    valid_loss     dur\n",
+      "-------  ------------  ------------  ------\n",
+      "      1    \u001b[36m69172.9500\u001b[0m    \u001b[32m66314.0578\u001b[0m  0.0107\n",
+      "      2    \u001b[36m66738.5977\u001b[0m    \u001b[32m64196.5266\u001b[0m  0.0109\n",
+      "      3    \u001b[36m64490.3758\u001b[0m    \u001b[32m62238.8250\u001b[0m  0.0109\n",
+      "      4    \u001b[36m62419.8773\u001b[0m    \u001b[32m60439.3195\u001b[0m  0.0108\n",
+      "      5    \u001b[36m60536.5930\u001b[0m    \u001b[32m58818.7016\u001b[0m  0.0109\n",
+      "      6    \u001b[36m58843.9805\u001b[0m    \u001b[32m57349.3656\u001b[0m  0.0108\n",
+      "      7    \u001b[36m57311.0258\u001b[0m    \u001b[32m56010.3852\u001b[0m  0.0108\n",
+      "      8    \u001b[36m55919.2398\u001b[0m    \u001b[32m54775.1281\u001b[0m  0.0109\n",
+      "      9    \u001b[36m54652.7438\u001b[0m    \u001b[32m53657.0203\u001b[0m  0.0108\n",
+      "     10    \u001b[36m53503.2094\u001b[0m    \u001b[32m52612.1914\u001b[0m  0.0109\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "scores = cross_val_score(wrapped_model, X.numpy(), y.numpy(), cv=5) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  epoch    train_loss    valid_loss     dur\n",
+      "-------  ------------  ------------  ------\n",
+      "      1    \u001b[36m68957.0406\u001b[0m    \u001b[32m67861.9000\u001b[0m  0.0110\n",
+      "      2    \u001b[36m66532.8383\u001b[0m    \u001b[32m65526.0531\u001b[0m  0.0109\n",
+      "      3    \u001b[36m64297.5172\u001b[0m    \u001b[32m63370.4508\u001b[0m  0.0108\n",
+      "      4    \u001b[36m62242.4461\u001b[0m    \u001b[32m61394.4227\u001b[0m  0.0108\n",
+      "      5    \u001b[36m60376.4531\u001b[0m    \u001b[32m59616.8852\u001b[0m  0.0108\n",
+      "      6    \u001b[36m58702.4953\u001b[0m    \u001b[32m58012.2992\u001b[0m  0.0108\n",
+      "      7    \u001b[36m57188.2602\u001b[0m    \u001b[32m56558.8719\u001b[0m  0.0108\n",
+      "      8    \u001b[36m55814.4219\u001b[0m    \u001b[32m55228.0641\u001b[0m  0.0108\n",
+      "      9    \u001b[36m54563.5859\u001b[0m    \u001b[32m54029.2258\u001b[0m  0.0108\n",
+      "     10    \u001b[36m53427.1852\u001b[0m    \u001b[32m52922.1023\u001b[0m  0.0108\n",
+      "  epoch    train_loss    valid_loss     dur\n",
+      "-------  ------------  ------------  ------\n",
+      "      1    \u001b[36m69143.4453\u001b[0m    \u001b[32m66310.7648\u001b[0m  0.0107\n",
+      "      2    \u001b[36m66696.5859\u001b[0m    \u001b[32m64190.1305\u001b[0m  0.0109\n",
+      "      3    \u001b[36m64439.5828\u001b[0m    \u001b[32m62230.9352\u001b[0m  0.0108\n",
+      "      4    \u001b[36m62364.4609\u001b[0m    \u001b[32m60431.6836\u001b[0m  0.0109\n",
+      "      5    \u001b[36m60480.3234\u001b[0m    \u001b[32m58812.5117\u001b[0m  0.0109\n",
+      "      6    \u001b[36m58790.1836\u001b[0m    \u001b[32m57345.3836\u001b[0m  0.0108\n",
+      "      7    \u001b[36m57261.9156\u001b[0m    \u001b[32m56008.9867\u001b[0m  0.0108\n",
+      "      8    \u001b[36m55876.1117\u001b[0m    \u001b[32m54776.1633\u001b[0m  0.0109\n",
+      "      9    \u001b[36m54615.3039\u001b[0m    \u001b[32m53656.7859\u001b[0m  0.0109\n",
+      "     10    \u001b[36m53471.0430\u001b[0m    \u001b[32m52616.1047\u001b[0m  0.0108\n",
+      "  epoch    train_loss    valid_loss     dur\n",
+      "-------  ------------  ------------  ------\n",
+      "      1    \u001b[36m69286.9859\u001b[0m    \u001b[32m66314.4734\u001b[0m  0.0107\n",
+      "      2    \u001b[36m66821.7180\u001b[0m    \u001b[32m64196.6195\u001b[0m  0.0110\n",
+      "      3    \u001b[36m64547.2469\u001b[0m    \u001b[32m62239.4234\u001b[0m  0.0108\n",
+      "      4    \u001b[36m62456.1930\u001b[0m    \u001b[32m60441.5820\u001b[0m  0.0108\n",
+      "      5    \u001b[36m60558.0359\u001b[0m    \u001b[32m58823.7352\u001b[0m  0.0109\n",
+      "      6    \u001b[36m58855.9898\u001b[0m    \u001b[32m57357.7789\u001b[0m  0.0109\n",
+      "      7    \u001b[36m57317.7969\u001b[0m    \u001b[32m56021.9953\u001b[0m  0.0109\n",
+      "      8    \u001b[36m55923.5375\u001b[0m    \u001b[32m54789.1734\u001b[0m  0.0109\n",
+      "      9    \u001b[36m54655.9586\u001b[0m    \u001b[32m53668.6352\u001b[0m  0.0109\n",
+      "     10    \u001b[36m53503.0648\u001b[0m    \u001b[32m52626.7633\u001b[0m  0.0109\n",
+      "  epoch    train_loss    valid_loss     dur\n",
+      "-------  ------------  ------------  ------\n",
+      "      1    \u001b[36m69562.8672\u001b[0m    \u001b[32m66310.7625\u001b[0m  0.0107\n",
+      "      2    \u001b[36m67067.5203\u001b[0m    \u001b[32m64189.7937\u001b[0m  0.0110\n",
+      "      3    \u001b[36m64763.9828\u001b[0m    \u001b[32m62230.2820\u001b[0m  0.0108\n",
+      "      4    \u001b[36m62645.0008\u001b[0m    \u001b[32m60431.0805\u001b[0m  0.0108\n",
+      "      5    \u001b[36m60720.3867\u001b[0m    \u001b[32m58812.3570\u001b[0m  0.0109\n",
+      "      6    \u001b[36m58993.3898\u001b[0m    \u001b[32m57346.0961\u001b[0m  0.0109\n",
+      "      7    \u001b[36m57432.5047\u001b[0m    \u001b[32m56010.8109\u001b[0m  0.0108\n",
+      "      8    \u001b[36m56018.2500\u001b[0m    \u001b[32m54779.6102\u001b[0m  0.0109\n",
+      "      9    \u001b[36m54734.0359\u001b[0m    \u001b[32m53661.6195\u001b[0m  0.0109\n",
+      "     10    \u001b[36m53567.5430\u001b[0m    \u001b[32m52623.5742\u001b[0m  0.0109\n",
+      "  epoch    train_loss    valid_loss     dur\n",
+      "-------  ------------  ------------  ------\n",
+      "      1    \u001b[36m69172.9500\u001b[0m    \u001b[32m66314.0578\u001b[0m  0.0107\n",
+      "      2    \u001b[36m66738.5977\u001b[0m    \u001b[32m64196.5266\u001b[0m  0.0109\n",
+      "      3    \u001b[36m64490.3758\u001b[0m    \u001b[32m62238.8250\u001b[0m  0.0108\n",
+      "      4    \u001b[36m62419.8773\u001b[0m    \u001b[32m60439.3195\u001b[0m  0.0108\n",
+      "      5    \u001b[36m60536.5930\u001b[0m    \u001b[32m58818.7016\u001b[0m  0.0108\n",
+      "      6    \u001b[36m58843.9805\u001b[0m    \u001b[32m57349.3656\u001b[0m  0.0109\n",
+      "      7    \u001b[36m57311.0258\u001b[0m    \u001b[32m56010.3852\u001b[0m  0.0109\n",
+      "      8    \u001b[36m55919.2398\u001b[0m    \u001b[32m54775.1281\u001b[0m  0.0108\n",
+      "      9    \u001b[36m54652.7438\u001b[0m    \u001b[32m53657.0203\u001b[0m  0.0109\n",
+      "     10    \u001b[36m53503.2094\u001b[0m    \u001b[32m52612.1914\u001b[0m  0.0109\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.model_selection import cross_val_score\n",
     "\n",
