--- a/RNN.ipynb
+++ b/RNN.ipynb
@@ -28,8 +28,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Candidate $C_n$\n",
-    "- 出力の一つ手前の隠れ層の役割を果たしている(?)\n",
+    "- Candidate $C_n$は出力の一つ手前の隠れ層の役割を果たしている\n",
+    "  - $h_n$は出力なのでそのひとつ手前の隠れ層と思えばよい？\n",
+    "  - LSTMの模式図では一番奥に書いてあるが、$x_n \\rightarrow C \\rightarrow h$と並べたほうが自然（？）\n",
     "- $x_n$,$h_n(=y_n)$に依存する（$C_{n-1}$に依存しない）３つのgateがある (すべてsigmoidで終わる = forgettable)\n",
     "    - forget gate \n",
     "    - input gate\n",
@@ -44,6 +45,19 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# GRU\n",
+    "- Candidateがない。\n",
+    "- このため、一層の場合、前回の出力$h_{n-1}$と今回の入力$x_n$のみから今回の出力$h_{n-1}$を決めることになる\n",
+    "- これは結構厳しいのではないかという印象を受けるがワークするのはなぜなのだろう？\n",
+    "    - LSTMに劣るという報告もあるようだが（要出典 To be added）"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
