refactoring web reference code

--- a/RNN.ipynb
+++ b/RNN.ipynb
@@ -473,6 +473,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# tensorの次元について　(broadcasting)\n",
+    "\n",
+    "https://pytorch.org/docs/stable/notes/broadcasting.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ふたつのテンソルがbroadcastableであるとは？（定義）\n",
+    "\n",
+    "- 双方とも最低一次元\n",
+    "- 後ろの次元からマッチしていき、\n",
+    "    - 完全一致、か\n",
+    "    - 片方の次元が存在しないか、次元が１\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
